--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "mongoose": "^8.1.0",
+    "nodemon": "^3.0.3",
     "zod": "^3.22.4"
   }
 }
